--- a/client/index.html
+++ b/client/index.html
@@ -6,11 +6,14 @@
   <title>My AngularJS App</title>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.min.js"></script>
+  <script src="node_modules/angular-jwt/dist/angular-jwt.js"></script>
+  <script src="node_modules/angular-storage/dist/angular-storage.js"></script>
   <script src="./app/app.js"></script>
-  <script src="./app/services/user.service.js"></script>
+  <script src="./app/services/auth.service.js"></script>
   <script src="./app/controllers/login.controller.js"></script>
   <script src="./app/controllers/register.controller.js"></script>
   <script src="./app/controllers/home.controller.js"></script>
+  <script src="./app/controllers/admin.controller.js"></script>
 </head>
 
 <body>
