--- a/client/index.html
+++ b/client/index.html
@@ -10,10 +10,12 @@
   <script src="node_modules/angular-storage/dist/angular-storage.js"></script>
   <script src="./app/app.js"></script>
   <script src="./app/services/auth.service.js"></script>
+  <script src="./app/services/product.service.js"></script>
   <script src="./app/controllers/login.controller.js"></script>
   <script src="./app/controllers/register.controller.js"></script>
   <script src="./app/controllers/home.controller.js"></script>
   <script src="./app/controllers/admin.controller.js"></script>
+  <script src="./app/controllers/product.controller.js"></script>
 </head>
 
 <body>
