--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,22 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.min.js"></script>
   <script src="node_modules/angular-jwt/dist/angular-jwt.js"></script>
   <script src="node_modules/angular-storage/dist/angular-storage.js"></script>
+  <!-- Bootstrap -->
+  <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+  <!-- Bootstrap -->
+  <!-- Material -->
+  <!-- <script src="node_modules/angular/angular.js"></script>
+  <script src="node_modules/angular-animate/angular-animate.js"></script>
+  <script src="node_modules/angular-aria/angular-aria.js"></script>
+  <script src="node_modules/angular-messages/angular-messages.js"></script>
+  <script src="node_modules/angular-material/angular-material.js"></script>
+  <link rel="stylesheet" href="node_modules/angular-material/angular-material.css">
+  <link rel="stylesheet" href="node_modules/angular-material/themes/angular-material-theme.css"> -->
+  <!-- Material -->
   <script src="./app/app.js"></script>
   <script src="./app/services/auth.service.js"></script>
   <script src="./app/services/product.service.js"></script>
@@ -16,6 +32,8 @@
   <script src="./app/controllers/home.controller.js"></script>
   <script src="./app/controllers/admin.controller.js"></script>
   <script src="./app/controllers/product.controller.js"></script>
+  <script src="./app/controllers/event.controller.js"></script>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
